# lab-04-boost-filesystem

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
ftp/ib/: balance_00001234_20181002.txt
include/: filesys.h
misc/ftp/bcs/: balance_00122223_20180901.old.txt  balance_00122223_20180901.txt  balance_00122223_20180902.old.txt  balance_00122223_20180902.txt  balance_00122223_20180903.old.txt  balance_00122223_20180903.txt  balance_00122223_20180904.old.txt  balance_00122223_20180904.txt  balance_00122223_20180905.old.txt  balance_00122223_20180905.txt  balance_00122223_20180906.txt  balance_00122223_20180907.txt  balance_00122223_20180908.txt  balance_00122223_20180909.txt  balance_00122223_20180910.txt  balance_00122223_20180911.txt  balance_00122223_20180912.txt  balance_00122223_20180913.txt  balance_00122223_20180914.txt  balance_00122223_20180915.txt  balance_00122223_20180916.txt  balance_00122223_20180917.txt  balance_00122223_20180918.txt  balance_00122223_20180919.txt  balance_00122223_20180920.txt  balance_00122223_20180921.txt  balance_00122223_20180922.txt  balance_00122223_20180923.txt  balance_00122223_20180924.txt  balance_00122223_20180925.txt  balance_00122223_20180926.txt  balance_00122223_20180927.txt  balance_00122223_20180928.txt  balance_00122223_20180929.txt  balance_00122223_20180930.txt  balance_00122223_20181001.txt  balance_00122223_20181002.txt  balance_00122223_20181003.txt  balance_00122223_20181004.txt  balance_00122223_20181005.txt  (+149 more)
misc/ftp/common/: total.xlsx
misc/ftp/ib/: balance_00100001_20180901.txt  (+142 more)
sources/: main.cpp
(+96 files in other folders)
